Configuraciòn de la arquitectura para al entidad Supplier
