# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\api\CustomerController;
+use App\Http\Controllers\api\SupplierController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -9,3 +10,4 @@ Route::get('/user', function (Request $request) {
 })->middleware('auth:sanctum');
 
 Route::apiResource('/customers', CustomerController::class);
+Route::apiResource('/suppliers', SupplierController::class);
